#103409946 created resource to get users portfolios